Updated files and added new assets

--- a/templates/base.html
+++ b/templates/base.html
@@ -69,7 +69,9 @@
             <a href="https://www.instagram.com/comprix.shop/" target="_blank" class="instagram-icon">
                 <i class="fab fa-instagram"></i>
             </a>
-            <i class="fab fa-linkedin-in"></i>
+            <a href="https://www.linkedin.com/company/comprix-shop" target="_blank" class="instagram-icon">
+                <i class="fab fa-linkedin-in"></i>
+            </a>
         </div>
         <p>© 2023 ComPrix</p>
     </section>
