--- a/templates/shopping_list.html
+++ b/templates/shopping_list.html
@@ -119,9 +119,15 @@
         <h4>{{ _('Contact Us') }}</h4>
         <!--<p>Lorem ipsum</p>-->
         <div class="icons">
-            <i class="fab fa-facebook-f"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-linkedin-in"></i>
+            <a href="https://www.facebook.com/comprix.shop" target="_blank" class="instagram-icon">
+                <i class="fab fa-facebook-f"></i>
+            </a>
+            <a href="https://www.instagram.com/comprix.shop/" target="_blank" class="instagram-icon">
+                <i class="fab fa-instagram"></i>
+            </a>
+            <a href="https://www.linkedin.com/company/comprix-shop" target="_blank" class="instagram-icon">
+                <i class="fab fa-linkedin-in"></i>
+            </a>
         </div>
         <p>© 2023 {{ _('ComPrix') }}</p>
     </section>
