--- a/templates/landing.html
+++ b/templates/landing.html
@@ -169,8 +169,10 @@
                         </a>
                         <a href="https://www.instagram.com/comprix.shop/" target="_blank">
                             <i class="fab fa-instagram"></i>
-                        </a>                        
-                        <i class="fab fa-linkedin-in"></i>        
+                        </a>  
+                        <a href="https://www.linkedin.com/company/comprix-shop" target="_blank">
+                            <i class="fab fa-linkedin-in"></i>
+                        </a>                         
                     </div>
                 </div>
                 
